Add turntable and encoder rotation preferences

--- a/data/settings.json
+++ b/data/settings.json
@@ -5,12 +5,14 @@
   "degreesPerStep": 1.799999952,
   "microStepsPerStep": 4,
   "driverMinimalMicroSec": 3,
-  "stepperReduction": 1,
-  "requiredRPM": 2,
+  "invertStepper": false,
+  "stepperReduction": 3,
+  "requiredRPM": 3,
   "maxDelta": 4,
   "enableEncoder": false,
-  "adjustPosition": true,
-  "encoderOffsetAngle": 345.4431152,
+  "adjustPosition": false,
+  "encoderOffsetAngle": 41.74472046,
+  "clockwiseIncrement": false,
   "imageOffsetAngle": 0,
   "slaveId": 1,
   "regId": 0,
@@ -22,8 +24,9 @@
   "moveSoundIndex": 2,
   "afterSoundIndex": 0,
   "afterSoundDuration": 0.5,
-  "traceDebug": true,
-  "traceCode": true,
+  "traceDebug": false,
+  "traceCode": false,
+  "traceJava": false,
   "trackCount": 15,
   "a1": 0,
   "a2": 30.03662109,
