--- a/data/settings.json
+++ b/data/settings.json
@@ -13,12 +13,13 @@
   "adjustPosition": false,
   "encoderOffsetAngle": 41.74472046,
   "clockwiseIncrement": false,
-  "imageOffsetAngle": 0,
+  "imageOffsetAngle": 0.0,
   "slaveId": 1,
   "regId": 0,
   "radius": 47,
+  "enableCircles": flase,
   "enableSound": false,
-  "soundVolume": 20,
+  "soundVolume": 10,
   "beforeSoundIndex": 0,
   "beforeSoundDuration": 2.5,
   "moveSoundIndex": 2,
