Add inertia when starting/stopping turntable

--- a/data/settings.json
+++ b/data/settings.json
@@ -2,12 +2,16 @@
   "ssid": "",
   "pwd": "",
   "name": "PontTournant",
-  "degreesPerStep": 1.799999952,
+  "degreesPerStep": 1.8,
   "microStepsPerStep": 4,
   "driverMinimalMicroSec": 3,
   "invertStepper": false,
-  "stepperReduction": 3,
+  "stepperReduction": 4,
   "requiredRPM": 3,
+  "inertiaFactorStarting": 3.0,
+  "inertiaAngleStarting": 2.0,
+  "inertiaFactorStopping": 5.0,
+  "inertiaAngleStopping": 5.0,			
   "maxDelta": 4,
   "enableEncoder": false,
   "adjustPosition": false,
@@ -20,11 +24,11 @@
   "enableCircles": flase,
   "enableSound": false,
   "soundVolume": 10,
-  "beforeSoundIndex": 0,
+  "beforeSoundIndex": 1,
   "beforeSoundDuration": 2.5,
   "moveSoundIndex": 2,
-  "afterSoundIndex": 0,
-  "afterSoundDuration": 0.5,
+  "afterSoundIndex": 3,
+  "afterSoundDuration": 2,
   "traceDebug": false,
   "traceCode": false,
   "traceJava": false,
