Remove some traces

--- a/data/settings.json
+++ b/data/settings.json
@@ -8,8 +8,8 @@
   "invertStepper": false,
   "stepperReduction": 4,
   "requiredRPM": 1,
-  "inertiaFactorStarting": 3.0,
-  "inertiaAngleStarting": 2.0,
+  "inertiaFactorStarting": 6.0,
+  "inertiaAngleStarting": 6.0,
   "inertiaFactorStopping": 5.0,
   "inertiaAngleStopping": 5.0,			
   "maxDelta": 4,
@@ -21,7 +21,7 @@
   "slaveId": 1,
   "regId": 0,
   "radius": 47,
-  "enableCircles": false,
+  "enableCircles": true,
   "enableSound": false,
   "soundVolume": 10,
   "beforeSoundIndex": 1,
