Add before/during/after rotation sound volumes

--- a/data/settings.json
+++ b/data/settings.json
@@ -7,47 +7,50 @@
   "driverMinimalMicroSec": 3,
   "invertStepper": false,
   "stepperReduction": 4,
-  "requiredRPM": 1,
+  "requiredRPM": 0.699999988,
   "inertiaFactorStarting": 6.0,
   "inertiaAngleStarting": 6.0,
   "inertiaFactorStopping": 5.0,
   "inertiaAngleStopping": 5.0,			
   "maxDelta": 4,
-  "enableEncoder": false,
+  "enableEncoder": true,
   "adjustPosition": false,
-  "encoderOffsetAngle": 41.74472046,
+  "encoderOffsetAngle": 89.01672363,
   "clockwiseIncrement": false,
-  "imageOffsetAngle": 0.0,
+  "imageOffsetAngle": 357.791748,
   "slaveId": 1,
   "regId": 0,
   "radius": 47,
-  "enableCircles": true,
-  "enableSound": false,
+
+  "enableSound": true,
   "soundVolume": 10,
   "beforeSoundIndex": 1,
-  "beforeSoundDuration": 2.5,
+  "beforeSoundDuration": 2,
+  "beforeSoundVolume": 20,
   "moveSoundIndex": 2,
+  "moveSoundVolume": 20,
   "afterSoundIndex": 3,
-  "afterSoundDuration": 2,
+  "afterSoundDuration": 3,
+  "afterSoundVolume": 20,
   "traceDebug": false,
   "traceCode": false,
   "traceJava": false,
   "trackCount": 15,
   "a1": 0,
-  "a2": 30.03662109,
-  "a3": 62.64404297,
-  "a4": 76.55273438,
-  "a5": 90.73608398,
-  "a6": 108.1988525,
-  "a7": 121.8109131,
-  "a8": 135.4724121,
-  "a9": 152.5177002,
-  "a10": 165.3442383,
-  "a11": 180.269165,
-  "a12": 194.3151855,
-  "a13": 209.09729,
-  "a14": 222.4401855,
-  "a15": 270.637207,
+  "a2": 30.02563477,
+  "a3": 62.06176758,
+  "a4": 76.17370605,
+  "a5": 90.03295898,
+  "a6": 107.4078369,
+  "a7": 121.1407471,
+  "a8": 134.9890137,
+  "a9": 152.1002197,
+  "a10": 165.0036621,
+  "a11": 180,
+  "a12": 194.7766113,
+  "a13": 208.8226318,
+  "a14": 222.1765137,
+  "a15": 270.1647949,
   "a16": -1,
   "a17": -1,
   "a18": -1,
