Change MP3 player to DS-SV17A, change pinout

--- a/data/settings.json
+++ b/data/settings.json
@@ -2,16 +2,17 @@
   "ssid": "",
   "pwd": "",
   "name": "PontTournant",
-  "degreesPerStep": 1.8,
+  "degreesPerStep": 1.799999952,
   "microStepsPerStep": 4,
   "driverMinimalMicroSec": 3,
   "invertStepper": false,
   "stepperReduction": 4,
   "requiredRPM": 0.699999988,
-  "inertiaFactorStarting": 6.0,
-  "inertiaAngleStarting": 6.0,
-  "inertiaFactorStopping": 5.0,
-  "inertiaAngleStopping": 5.0,			
+  "inertiaAngleStarting": 6,
+  "inertiaAngleStopping": 6,
+  "inertiaFactorStarting": 5,
+  "inertiaFactorStopping": 5,
+  "ledOnWhenHigh" : false,
   "maxDelta": 4,
   "enableEncoder": true,
   "adjustPosition": false,
@@ -21,19 +22,17 @@
   "slaveId": 1,
   "regId": 0,
   "radius": 47,
-
   "enableSound": true,
-  "soundVolume": 10,
   "beforeSoundIndex": 1,
-  "beforeSoundDuration": 2,
+  "beforeSoundDuration": 3,
   "beforeSoundVolume": 20,
   "moveSoundIndex": 2,
   "moveSoundVolume": 20,
   "afterSoundIndex": 3,
-  "afterSoundDuration": 3,
-  "afterSoundVolume": 20,
-  "traceDebug": false,
-  "traceCode": false,
+  "afterSoundDuration": 2,
+  "afterSoundVolume": 23,
+  "traceDebug": true,
+  "traceCode": true,
   "traceJava": false,
   "trackCount": 15,
   "a1": 0,
