--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,11 @@
 [env]
 framework = arduino
-platform = espressif8266 @ ~3.2.0
+platform = espressif8266 # @ ~3.2.0
 lib_deps =
   https://github.com/emelianov/modbus-esp8266.git
   https://github.com/me-no-dev/ESPAsyncWebServer.git
   https://github.com/bblanchon/ArduinoJson.git
-  https://github.com/DFRobot/DFRobotDFPlayerMini.git
+  https://github.com/arduino12/mp3_player_module_wire.git
 board_build.filesystem = littlefs
 upload_speed = 460800
 monitor_speed = 74880
