Change LED to D2. Some cosmetic changes

--- a/data/settings.json
+++ b/data/settings.json
@@ -7,30 +7,30 @@
   "driverMinimalMicroSec": 3,
   "invertStepper": false,
   "stepperReduction": 4,
-  "requiredRPM": 0.699999988,
+  "requiredRPM": 0.5,
   "inertiaAngleStarting": 6,
   "inertiaAngleStopping": 6,
   "inertiaFactorStarting": 5,
   "inertiaFactorStopping": 5,
-  "ledOnWhenHigh" : false,
+  "ledOnWhenHigh": true,
   "maxDelta": 4,
   "enableEncoder": true,
   "adjustPosition": false,
-  "encoderOffsetAngle": 89.01672363,
+  "encoderOffsetAngle": 88.59375,
   "clockwiseIncrement": false,
-  "imageOffsetAngle": 357.791748,
+  "imageOffsetAngle": 359.4616699,
   "slaveId": 1,
   "regId": 0,
   "radius": 47,
   "enableSound": true,
   "beforeSoundIndex": 1,
   "beforeSoundDuration": 3,
-  "beforeSoundVolume": 20,
+  "beforeSoundVolume": 24,
   "moveSoundIndex": 2,
   "moveSoundVolume": 20,
   "afterSoundIndex": 3,
-  "afterSoundDuration": 2,
-  "afterSoundVolume": 23,
+  "afterSoundDuration": 2.400000095,
+  "afterSoundVolume": 24,
   "traceDebug": true,
   "traceCode": true,
   "traceJava": false,
