Add DCC support

--- a/data/settings.json
+++ b/data/settings.json
@@ -15,6 +15,7 @@
   "ledOnWhenHigh": true,
   "maxDelta": 4,
   "enableEncoder": true,
+  "enableDCC": true,
   "adjustPosition": false,
   "encoderOffsetAngle": 88.59375,
   "clockwiseIncrement": false,
@@ -70,5 +71,41 @@
   "a33": -1,
   "a34": -1,
   "a35": -1,
-  "a36": -1
+  "a36": -1,
+  "d1": 206.0,
+  "d2": 203.0,
+  "d3": 200.5,
+  "d4": 223.5,
+  "d5": 222.5,
+  "d6": 221.5,
+  "d7": 220.5,
+  "d8": 219.5,
+  "d9": 218.5,
+  "d10": 217.5,
+  "d11": 216.5,
+  "d12": 215.5,
+  "d13": 214.5,
+  "d14": 213.5,
+  "d15": 212.0,
+  "d16": -1,
+  "d17": -1,
+  "d18": -1,
+  "d19": -1,
+  "d20": -1,
+  "d21": -1,
+  "d22": -1,
+  "d23": -1,
+  "d24": -1,
+  "d25": -1,
+  "d26": -1,
+  "d27": -1,
+  "d28": -1,
+  "d29": -1,
+  "d30": -1,
+  "d31": -1,
+  "d32": -1,
+  "d33": -1,
+  "d34": -1,
+  "d35": -1,
+  "d36": -1 
 }
