--- a/data/settings.json
+++ b/data/settings.json
@@ -3,7 +3,7 @@
   "pwd": "",
   "name": "PontTournant",
   "degreesPerStep": 1.799999952,
-  "microStepsPerStep": 4,
+  "microStepsPerStep": 8,
   "driverMinimalMicroSec": 3,
   "invertStepper": false,
   "stepperReduction": 4,
@@ -17,7 +17,7 @@
   "enableEncoder": true,
   "enableDCC": true,
   "adjustPosition": false,
-  "encoderOffsetAngle": 88.59375,
+  "encoderOffsetAngle": 86.70959473,
   "clockwiseIncrement": false,
   "imageOffsetAngle": 359.4616699,
   "slaveId": 1,
@@ -30,7 +30,7 @@
   "moveSoundIndex": 2,
   "moveSoundVolume": 20,
   "afterSoundIndex": 3,
-  "afterSoundDuration": 2.400000095,
+  "afterSoundDuration": 1.700000048,
   "afterSoundVolume": 24,
   "traceDebug": true,
   "traceCode": true,
@@ -41,7 +41,7 @@
   "a3": 62.06176758,
   "a4": 76.17370605,
   "a5": 90.03295898,
-  "a6": 107.4078369,
+  "a6": 107.8308105,
   "a7": 121.1407471,
   "a8": 134.9890137,
   "a9": 152.1002197,
