Allow locomotive flipping on DCC

--- a/data/settings.json
+++ b/data/settings.json
@@ -16,6 +16,7 @@
   "maxDelta": 4,
   "enableEncoder": true,
   "enableDCC": true,
+  "enableReversePosition": true,
   "adjustPosition": false,
   "encoderOffsetAngle": 86.70959473,
   "clockwiseIncrement": false,
@@ -107,5 +108,41 @@
   "d33": -1,
   "d34": -1,
   "d35": -1,
-  "d36": -1 
+  "d36": -1 ,
+  "r1":  218.0,
+  "r2":  215.0,
+  "r3":  212.5,
+  "r4":  212.5,
+  "r5":  210.5,
+  "r6":  209.5,
+  "r7":  208.5,
+  "r8":  207.5,
+  "r9":  206.5,
+  "r10":  205.5,
+  "r11":  204.5,
+  "r12":  203.5,
+  "r13":  202.5,
+  "r14":  201.5,
+  "r15":  200.0,
+  "r16": -1,
+  "r17": -1,
+  "r18": -1,
+  "r19": -1,
+  "r20": -1,
+  "r21": -1,
+  "r22": -1,
+  "r23": -1,
+  "r24": -1,
+  "r25": -1,
+  "r26": -1,
+  "r27": -1,
+  "r28": -1,
+  "r29": -1,
+  "r30": -1,
+  "r31": -1,
+  "r32": -1,
+  "r33": -1,
+  "r34": -1,
+  "r35": -1,
+  "r36": -1
 }
